<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previous_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/current_number"
        android:layout_margin="16dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/current_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_grid"
        android:layout_margin="16dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="72sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="16dp"

        android:id="@+id/button_grid"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/clearText"
                android:textColor="@color/white"
                android:backgroundTint="@color/material_dynamic_primary20"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/parenthesesText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/percentText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/material_dynamic_primary50"
                android:text="@string/divideText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/sevenText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/eightText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/nineText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/material_dynamic_primary50"
                android:text="@string/multiplyText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/fourText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/fiveText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/sixText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/material_dynamic_primary50"
                android:text="@string/subtractText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/oneText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/twoText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/threeText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/material_dynamic_primary50"
                android:text="@string/additionText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/signText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/zeroText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_decimal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:text="@string/decimalText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/material_dynamic_primary20"
                android:text="@string/equalsText"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>